<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.ElectionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <TextView
            android:id="@+id/upcoming_elections_title"
            style="@style/RecyclerviewTitleStyle"
            android:text="@string/upcoming_elections"
            app:layout_constraintBottom_toTopOf="@+id/upcoming_elections_recycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_elections_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_medium"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/saved_elections_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_elections_title"
            app:listData="@{viewModel.upcomingElectionsList}" />

        <TextView
            android:id="@+id/saved_elections_title"
            style="@style/RecyclerviewTitleStyle"
            android:text="@string/saved_elections"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_elections_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saved_elections_title"
            app:listData="@{viewModel.savedElectionsList}"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:electionApiStatus="@{viewModel.apiStatus}"
            android:contentDescription="@string/staus_of_the_api" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>