<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="representative"
            type= "com.example.android.politicalpreparedness.representative.model.Representative"
            />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_very_small"
        android:padding="@dimen/margin_medium"
        android:backgroundTint="#DDEAE7"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/representative_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{representative.office.name}"
                android:layout_marginStart="@dimen/margin_very_small"
                android:textSize="@dimen/title_text_medium"
                android:maxLines="2"
                app:layout_constraintStart_toEndOf="@+id/ic_profile"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="President of the Bureau" />

            <TextView
                android:id="@+id/representative_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{representative.official.name}"
                android:textSize="@dimen/description_text_height"
                app:layout_constraintStart_toStartOf="@+id/representative_position"
                app:layout_constraintTop_toBottomOf="@+id/representative_position"
                tools:text="John Doe" />

            <TextView
                android:id="@+id/representative_party"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{representative.official.party}"
                android:textSize="@dimen/description_text_height"
                app:layout_constraintStart_toStartOf="@+id/representative_name"
                app:layout_constraintTop_toBottomOf="@+id/representative_name"
                tools:text="Liberal Party" />

            <ImageView
                android:id="@+id/ic_profile"
                android:layout_width="@dimen/image_item_size"
                android:layout_height="@dimen/image_item_size"
                android:layout_margin="@dimen/margin_very_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:profileImage="@{representative.official.photoUrl}"
                app:srcCompat="@drawable/ic_profile"
                android:contentDescription="@string/photo_of_the_person" />

            <ImageButton
                android:id="@+id/wwwIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_link_button"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/facebookIcon"
                app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
                app:layout_constraintTop_toTopOf="@+id/facebookIcon"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_www"
                android:contentDescription="@string/website_link" />

            <ImageButton
                android:id="@+id/facebookIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_link_button"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="@+id/representative_party"
                app:layout_constraintEnd_toStartOf="@+id/twitterIcon"
                app:layout_constraintTop_toBottomOf="@+id/representative_position"
                app:srcCompat="@drawable/ic_facebook"
                android:contentDescription="@string/facebook_link" />

            <ImageButton
                android:id="@+id/twitterIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_link_button"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="@+id/representative_party"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/representative_position"
                app:srcCompat="@drawable/ic_twitter"
                android:contentDescription="@string/twitter_link" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</layout>